--- a/package.json
+++ b/package.json
@@ -2,17 +2,65 @@
   "name": "southsidepn",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://pbullion.github.io/southsidepn",
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-standard": "^3.0.1",
+    "formsy-react": "^0.19.2",
+    "formsy-react-components": "^0.10.1",
+    "gh-pages": "^1.1.0",
+    "jest": "^19.0.2",
+    "lodash": "^4.17.4",
+    "material-ui": "^0.18.0",
+    "prop-types": "^15.5.8",
+    "raf": "^3.3.2",
+    "react": "^15.4.2",
+    "react-bootstrap": "^0.31.0",
+    "react-burger-menu": "^2.1.8",
+    "react-color": "^2.13.8",
+    "react-delay": "0.0.3",
+    "react-dom": "^15.4.2",
+    "react-fontawesome": "^1.6.1",
+    "react-google-login": "^2.8.5",
+    "react-images-uploader": "^1.1.0",
+    "react-lazy-hero": "^0.2.1",
+    "react-modal": "^3.0.0",
+    "react-overlays": "^0.7.0",
+    "react-router": "^3.0.2",
+    "react-router-bootstrap": "^0.23.3",
+    "react-tap-event-plugin": "^2.0.1",
+    "scroll-to-element": "^2.0.0",
+    "tween": "^0.9.0"
   },
   "devDependencies": {
-    "react-scripts": "1.0.17"
+    "babel-jest": "^19.0.0",
+    "enzyme": "^2.8.2",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "flow-bin": "^0.44.2",
+    "jest-enzyme": "^3.1.1",
+    "jest": "^19.0.0",
+    "mocha": "^3.2.0",
+    "react-addons-test-utils": "^15.5.1",
+    "react-scripts": "1.0.5",
+    "react-test-renderer": "^15.5.4",
+    "should": "^11.2.1",
+    "should-enzyme": "^1.2.0"
+  },
+  "repository": {
+    "type": "git"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "flow": "flow"
   }
 }
