--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "jest": "^19.0.2",
     "lodash": "^4.17.4",
     "material-ui": "^0.18.0",
+    "moment": "^2.20.0",
     "prop-types": "^15.5.8",
     "raf": "^3.3.2",
     "react": "^15.4.2",
+    "react-big-calendar": "^0.17.0",
     "react-bootstrap": "^0.31.0",
     "react-burger-menu": "^2.1.8",
     "react-color": "^2.13.8",
@@ -36,6 +38,7 @@
   },
   "devDependencies": {
     "babel-jest": "^19.0.0",
+    "babel-preset-flow": "^6.23.0",
     "enzyme": "^2.8.2",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.2.0",
@@ -43,10 +46,11 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "flow-bin": "^0.44.2",
-    "jest-enzyme": "^3.1.1",
     "jest": "^19.0.0",
+    "jest-enzyme": "^3.1.1",
     "mocha": "^3.2.0",
     "react-addons-test-utils": "^15.5.1",
+    "react-dev-utils": "^4.2.1",
     "react-scripts": "1.0.5",
     "react-test-renderer": "^15.5.4",
     "should": "^11.2.1",
